Tạo mới CM, xem danh sách user