@@ -10,12 +10,13 @@ import com.hcmute.lovestream.repository.GenreRepository;
 import com.hcmute.lovestream.repository.MediaAssetRepository;
 import com.hcmute.lovestream.repository.MovieRepository;
 import com.hcmute.lovestream.service.admin.movie.AdminMovieManagementService;
+import com.hcmute.lovestream.service.storage.MediaStorageService;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
+import org.springframework.data.domain.Page;
+import org.springframework.data.domain.Pageable; // Đã thêm import
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
-
-import com.hcmute.lovestream.service.storage.MediaStorageService;
 import org.springframework.web.multipart.MultipartFile;
 
 import java.io.IOException;
@@ -32,42 +33,24 @@ public class AdminMovieManagementServiceImpl implements AdminMovieManagementServ
     private final MediaAssetRepository mediaAssetRepository;
     private final MediaStorageService mediaStorageService;
 
+    // -- 1. Queries (Đã gộp chung và tích hợp Phân trang) --
     @Override
     @Transactional(readOnly = true)
-    public List<Movie> getAllMovies() {
-        return movieRepository.findAllByOrderByTitleAsc();
-    }
-
-    @Override
-    @Transactional(readOnly = true)
-    public List<Movie> getMoviesByStatus(ContentStatus status) {
-        return movieRepository.findAllByStatusOrderByTitleAsc(status);
-    }
-
-    @Override
-    @Transactional(readOnly = true)
-    public List<Movie> searchMoviesByTitle(String keyword) {
-        if (keyword == null || keyword.trim().isEmpty()) {
-            return getAllMovies();
+    public Page<Movie> getMovies(String keyword, ContentStatus status, Pageable pageable) {
+        // Nếu có cả từ khóa và trạng thái
+        if (keyword != null && !keyword.isBlank() && status != null) {
+            return movieRepository.findByTitleContainingIgnoreCaseAndStatus(keyword.trim(), status, pageable);
         }
-        return movieRepository.findByTitleContainingIgnoreCaseOrderByTitleAsc(keyword);
-    }
-
-    @Override
-    @Transactional(readOnly = true)
-    public List<Movie> filterMovies(ContentStatus status, String keyword) {
-        boolean hasKeyword = keyword != null && !keyword.trim().isEmpty();
-
-        if (!hasKeyword && status == null) {
-            return getAllMovies();
+        // Nếu chỉ có trạng thái
+        if (status != null) {
+            return movieRepository.findByStatus(status, pageable);
         }
-        if (!hasKeyword) {
-            return getMoviesByStatus(status);
+        // Nếu chỉ có từ khóa
+        if (keyword != null && !keyword.isBlank()) {
+            return movieRepository.findByTitleContainingIgnoreCase(keyword.trim(), pageable);
         }
-        if (status == null) {
-            return searchMoviesByTitle(keyword);
-        }
-        return movieRepository.findByStatusAndTitleContainingIgnoreCaseOrderByTitleAsc(status, keyword);
+        // Lấy tất cả (Mặc định)
+        return movieRepository.findAll(pageable);
     }
 
     @Override
@@ -77,6 +60,7 @@ public class AdminMovieManagementServiceImpl implements AdminMovieManagementServ
                 .orElseThrow(() -> new RuntimeException("Không tìm thấy phim lẻ với ID: " + id));
     }
 
+    // -- 2. CRUD Operations --
     @Override
     @Transactional
     public Movie createMovie(MovieUpsertRequest request) {
@@ -94,41 +78,40 @@ public class AdminMovieManagementServiceImpl implements AdminMovieManagementServ
     @Transactional
     public Movie updateMovie(String id, MovieUpsertRequest request) {
         Movie targetMovie = getMovieById(id);
-        
+
         mapRequestToMovie(request, targetMovie);
-        
+
         log.info("Updating Movie ID: {}", id);
         return movieRepository.save(targetMovie);
     }
 
+    // -- 3. Status Management (Đã gộp thành 1 hàm toggle) --
     @Override
     @Transactional
-    public void hideMovie(String id) {
+    public void toggleMovieStatus(String id) {
         Movie movie = getMovieById(id);
-        movie.setStatus(ContentStatus.HIDDEN);
-        movieRepository.save(movie);
-        log.info("Hidden Movie ID: {}", id);
+
+        if (movie.getStatus() == ContentStatus.ACTIVE) {
+            movie.setStatus(ContentStatus.HIDDEN);
+            log.info("Hidden Movie ID: {}", id);
+        } else {
+            movie.setStatus(ContentStatus.ACTIVE);
+            log.info("Restored Movie ID: {}", id);
+        }
+        // Nhờ @Transactional, DB sẽ tự động update
     }
 
-    @Override
-    @Transactional
-    public void restoreMovie(String id) {
-        Movie movie = getMovieById(id);
-        movie.setStatus(ContentStatus.ACTIVE);
-        movieRepository.save(movie);
-        log.info("Restored Movie ID: {}", id);
-    }
-
+    // -- 4. Media Asset Management --
     @Override
     @Transactional
     public MediaAsset addAsset(String movieId, AssetType assetType, String assetUrl) {
         Movie movie = getMovieById(movieId);
-        
+
         MediaAsset asset = new MediaAsset();
         asset.setAssetType(assetType);
         asset.setAssetUrl(assetUrl);
-        asset.setVideoContent(movie);
-        
+        asset.setVideoContent(movie); // Kế thừa từ VideoContent
+
         log.info("Adding {} to Movie ID: {}", assetType, movieId);
         return mediaAssetRepository.save(asset);
     }
@@ -136,13 +119,11 @@ public class AdminMovieManagementServiceImpl implements AdminMovieManagementServ
     @Override
     @Transactional
     public void removeAsset(String movieId, String assetId) {
-        // Kiểm tra xem Movie có tồn tại không
-        getMovieById(movieId); 
-        
+        getMovieById(movieId);
+
         MediaAsset asset = mediaAssetRepository.findById(assetId)
                 .orElseThrow(() -> new RuntimeException("Không tìm thấy Asset với ID: " + assetId));
-                
-        // Xác nhận Asset này thực sự thuộc về bộ phim vừa cung cấp chứ không phải chọc nhầm ID
+
         if (asset.getVideoContent() == null || !asset.getVideoContent().getId().equals(movieId)) {
             throw new RuntimeException("Tài nguyên không thuộc về bộ phim này!");
         }
@@ -170,27 +151,24 @@ public class AdminMovieManagementServiceImpl implements AdminMovieManagementServ
         target.setTitle(request.getTitle());
         target.setDescription(request.getDescription());
         target.setReleaseYear(request.getReleaseYear());
-        
+
         if (request.getReleaseDate() != null) {
             target.setReleaseDate(java.sql.Date.valueOf(request.getReleaseDate()));
         }
-        
+
         target.setDurationMinutes(request.getDurationMinutes());
         target.setAgeRating(request.getAgeRating());
         target.setQuality(request.getQuality());
         target.setStatus(request.getStatus());
 
-        // Xử lý Genres
         List<String> genreIds = request.getGenreIds();
         if (genreIds != null && !genreIds.isEmpty()) {
             List<Genre> selectedGenres = genreRepository.findAllById(genreIds);
-            
-            // Nếu gửi danh sách ID lên nhưng DB tìm mảng ra rỗng hoàn toàn 
-            // có nghĩa là User đang hack DOM HTML thay đổi ID lung tung
+
             if (selectedGenres.isEmpty() || selectedGenres.size() != genreIds.size()) {
                 throw new RuntimeException("Có ít nhất một thể loại không tồn tại trong hệ thống. Vui lòng tải lại trang!");
             }
-            
+
             target.setGenres(new HashSet<>(selectedGenres));
         } else {
             target.setGenres(new HashSet<>());
